# sora-no-wana

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/app/: mod.rs
src/app/screens/: main_menu.rs
src/game/: mod.rs
src/game/components/: common.rs  galaxy_map.rs  mod.rs  orbit.rs  planet.rs  spatial.rs  star.rs  system_map.rs
src/game/resourses/: galaxy.rs  mod.rs  system.rs
src/game/systems/: galaxy_generation.rs  galaxy_map.rs  mod.rs  star_system_generation.rs  system_map.rs  ui.rs
src/ui/: galaxy_map.rs  mod.rs  styles.rs  system_map.rs
src/ui/screens/: game_screen.rs  main_menu.rs  mod.rs
