[package]
name = "sora_no_wana"
description = "Weave the Stars, Trap the Universe"
authors = ["Kosachev Egor <e.kosachev-s@mail.ru>"]
license = "GPL-3.0-only"
version = "0.0.1-alpha.1"
edition = "2021"

[dependencies]
bevy = "0.15.3"
bevy_egui = "0.33.0"
egui = "0.31.1"
itertools = "0.14.0"
egui_extras = { version = "0.31.0", features = ["all_loaders"] }
vecmath = "1.0.0"
rand = "0.9.0"
rand_distr = "0.5.1"
noise = "0.9.0"

[dependencies.uuid]
version = "1.12.1"
# Lets you generate random UUIDs
features = ["v4"]
